--- a/4/4.ipynb
+++ b/4/4.ipynb
@@ -65,7 +65,7 @@
     "Tc = Td / 8\n",
     "T0 = 1.17\n",
     "n = 6\n",
-    "w1 = (1 + 1 / ((Tkr / 1.2 - 6.5)*s)) * (Kkr * 0.45 + 0.068) * (2/(1 + T0 * s)^6)\n",
+    "w1 = (1 + 1 / ((Tkr / 1.2 - 6.5)*s)) * (Kkr * 0.45 + 0.068) * (2/(1 + T0 * s)^n)\n",
     "w = w1 / (1 + w1)"
    ]
   },
